define basic results/summary markup

--- a/index.html
+++ b/index.html
@@ -9,7 +9,25 @@
 </head>
 <body>
 <main>
-    <article class="container"></article>
+    <article class="container">
+        <div class="result">
+            content 1 <br>
+            content 1 <br>
+            content 1 <br>
+            content 1 <br>
+            content 1 <br>
+            content 1 <br>
+            content 1 <br>
+            content 1 <br>
+            content 1 <br>
+        </div>
+        <div class="summary">
+            content 2 <br>
+            content 2 <br>
+            content 2 <br>
+            content 2 <br>
+        </div>
+    </article>
 </main>
 </body>
 </html>
