add result section headline

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <main>
     <article class="container">
         <div class="result">
-            content 1 <br>
+            <h1>Your Result</h1>
             content 1 <br>
             content 1 <br>
             content 1 <br>
