--- a/index.html
+++ b/index.html
@@ -12,15 +12,9 @@
     <article class="container">
         <div class="result">
             <h1>Your Result</h1>
-            content 1 <br>
-            content 1 <br>
-            content 1 <br>
         </div>
         <div class="summary">
-            content 2 <br>
-            content 2 <br>
-            content 2 <br>
-            content 2 <br>
+            <h1>Summary</h1>
         </div>
     </article>
 </main>
