add circle with a score

--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
     <article class="container">
         <div class="result">
             <h1>Your Result</h1>
+            <div class="score">
+                <div class="score-value">76</div>
+                <div class="score-total">of 100</div>
+            </div>
         </div>
         <div class="summary">
             <h1>Summary</h1>
