add score result

--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
                 <div class="score-value">76</div>
                 <div class="score-total">of 100</div>
             </div>
+            <div class="score-result">
+                Great
+            </div>
         </div>
         <div class="summary">
             <h1>Summary</h1>
