add score description

--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
             <div class="score-result">
                 Great
             </div>
+            <div class="score-description">
+                Your performance exceed 65% of the people conducting the test here!
+            </div>
         </div>
         <div class="summary">
             <h1>Summary</h1>
