add summary criteria

--- a/index.html
+++ b/index.html
@@ -25,6 +25,40 @@
         </div>
         <div class="summary">
             <h1>Summary</h1>
+            <ul class="criteria-list">
+                <li class="criteria reaction">
+                    <div class="criteria-icon"></div>
+                    <div class="criteria-name">Reaction</div>
+                    <div class="criteria-score">
+                        80
+                        <span class="criteria-score-total">/ 100</span>
+                    </div>
+                </li>
+                <li class="criteria reaction">
+                    <div class="criteria-icon"></div>
+                    <div class="criteria-name">Reaction</div>
+                    <div class="criteria-score">
+                        80
+                        <span class="criteria-score-total">/ 100</span>
+                    </div>
+                </li>
+                <li class="criteria reaction">
+                    <div class="criteria-icon"></div>
+                    <div class="criteria-name">Reaction</div>
+                    <div class="criteria-score">
+                        80
+                        <span class="criteria-score-total">/ 100</span>
+                    </div>
+                </li>
+                <li class="criteria reaction">
+                    <div class="criteria-icon"></div>
+                    <div class="criteria-name">Reaction</div>
+                    <div class="criteria-score">
+                        80
+                        <span class="criteria-score-total">/ 100</span>
+                    </div>
+                </li>
+            </ul>
         </div>
     </article>
 </main>
