set up missing criteria

--- a/index.html
+++ b/index.html
@@ -34,27 +34,27 @@
                         <span class="criteria-score-total">/ 100</span>
                     </div>
                 </li>
-                <li class="criteria reaction">
+                <li class="criteria memory">
                     <div class="criteria-icon"></div>
-                    <div class="criteria-name">Reaction</div>
+                    <div class="criteria-name">Memory</div>
                     <div class="criteria-score">
-                        80
+                        92
                         <span class="criteria-score-total">/ 100</span>
                     </div>
                 </li>
-                <li class="criteria reaction">
+                <li class="criteria verbal">
                     <div class="criteria-icon"></div>
-                    <div class="criteria-name">Reaction</div>
+                    <div class="criteria-name">Verbal</div>
                     <div class="criteria-score">
-                        80
+                        61
                         <span class="criteria-score-total">/ 100</span>
                     </div>
                 </li>
-                <li class="criteria reaction">
+                <li class="criteria visual">
                     <div class="criteria-icon"></div>
-                    <div class="criteria-name">Reaction</div>
+                    <div class="criteria-name">Visual</div>
                     <div class="criteria-score">
-                        80
+                        73
                         <span class="criteria-score-total">/ 100</span>
                     </div>
                 </li>
