add continue button

--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
                     </div>
                 </li>
             </ul>
+            <div class="continue-button">Continue</div>
         </div>
     </article>
 </main>
